hphp/hack/test/typecheck/reactive/rx_append2.php
<?hh // partial

<<__Rx>>
function a(Set<int> $a): void {
  $a[] = 1;
}
